WND-2125 (part 2) - Fixes, integration of Postgres into the script logic

--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
         "setup.js",
         "defaults.js",
         "defaults_custom.js",
-        "unlockBatch.js",
-        "upgrades.js"
+        "unlockBatch.js"
     ],
     "repository": {
         "type": "git",
